[package]
name = "agentfs"
version = "0.1.3"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Agent Persistence"
documentation = "https://docs.rs/agentfs"
homepage = "https://github.com/cryptopatrick/agentfs"
repository = "https://github.com/cryptopatrick/agentfs"
readme = "README.md"
keywords = ["AI", "Agent", "Persistence"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "agentfs"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
agentsql = { version = "0.1.0", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

###############################################################################
[[example]]
name = "rig_basic"
required-features = ["rig"]

[[example]]
name = "rig_research_agent"
required-features = ["rig"]


###############################################################################
[features]
default = ["sqlite"]
sqlite = ["agentsql", "agentsql/sqlite"]
postgres = ["agentsql", "agentsql/postgres"]
mysql = ["agentsql", "agentsql/mysql"]
rig = ["async-trait", "tokio"]