[package]
name = "agentfs"
version = "0.1.4"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Agent Persistence"
documentation = "https://docs.rs/agentfs"
homepage = "https://github.com/cryptopatrick/agentfs"
repository = "https://github.com/cryptopatrick/agentfs"
readme = "README.md"
keywords = ["AI", "Agent", "Persistence"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "agentfs"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
agentdb = { path = "../agentdb" }
agentsql = { path = "../agentsql", optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# TODO: Add Rig integration when needed
# rig = { version = "0.3", optional = true }

###############################################################################
[[example]]
name = "basic"
required-features = ["sqlite"]

[[example]]
name = "postgres"
required-features = ["postgres"]

[[example]]
name = "mysql"
required-features = ["mysql"]

[[example]]
name = "rig_basic"
required-features = ["rig-integration"]

[[example]]
name = "rig_research_agent"
required-features = ["rig-integration"]


###############################################################################
[features]
default = ["sqlite"]
sqlite = ["agentsql", "agentsql/sqlite"]
postgres = ["agentsql", "agentsql/postgres"]
mysql = ["agentsql", "agentsql/mysql"]
# Rig.rs integration (requires rig crate to be added as dependency)
# Uncomment the rig dependency above to enable this feature
rig-integration = []  # Placeholder feature for conditional compilation